--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -66,10 +66,11 @@ nav.main {
 
 section.banner {
 	display: flex;
+	overflow: hidden;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 25rem;
+	height: 30rem;
 	padding-top: 4rem;
 	h1,
 	p {
@@ -89,6 +90,11 @@ section.banner {
 		background-size: cover;
 		background-color: var(--black0);
 	}
+	img {
+		filter: blur(0.25rem);
+		margin-top: 26rem;
+		width: 100%;
+	}
 }
 article.main {
 	width: 100%;
@@ -98,7 +104,7 @@ article.main {
 		margin: 2rem;
 		display: grid;
 		grid-gap: 2rem;
-		grid-template-rows: repeat(4, 10rem);
+		grid-template-rows: repeat(2, 10rem);
 		grid-template-columns: repeat(7, 11rem);
 		div {
 			display: flex;
