--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -135,6 +135,12 @@ article.main {
 			position: absolute;
 			color: white;
 		}
+		.icons {
+			width: 6rem;
+			height: 6rem;
+			position: absolute;
+			color: white;
+		}
 		.msg {
 			grid-column: 1/3;
 			grid-row: 1;
